# AI_Partner

./: .env.example  FRONTEND_BUILD_SUMMARY.md  INDEX.md  PROJECT_STATISTICS.md  README.md  SETUP_INSTRUCTIONS.md  START_HERE.md  VISUAL_SUMMARY.txt  llm.py  main.py  partners.py  pyproject.toml  requirements.txt  session_manager.py  tools.py  vercel.json
app/: main.py  schemas.py
app/api/: routes.py
app/core/: __init__.py  auth.py  config.py  db.py  llm.py  tools.py
app/domain/: __init__.py  partners.py
app/services/: session_manager.py
frontend/: .gitignore  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/[sessionId]/: page.tsx
frontend/app/onboard/: page.tsx
frontend/app/partners/: page.tsx
frontend/components/: ChatInput.tsx  ChatMessage.tsx
frontend/lib/: api.ts
