[project]
name = "ai-companion-saas"
version = "1.0.0"
description = "AI Companion SAAS — personalised virtual partner experiences powered by Gemini AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.65.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]
